Fix stretch issue in mobile devices

--- a/site/components/quote/style.css
+++ b/site/components/quote/style.css
@@ -27,6 +27,7 @@ blockquote:after {
 }
 .quotation__author {
   display: flex;
+  display: -webkit-box;
   margin-top: 16px;
 }
 
